--- a/Angular_cafe_Mgm/Cafe-app/src/app/nav/nav.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/nav/nav.component.html
@@ -15,17 +15,17 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav  mx-auto ">
-            <li class="nav-item active">
-              <a class="nav-link" routerLink="/">Home</a>
+            <li class="nav-item">
+              <a class="nav-link"  routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/menu">Menu</a>
+              <a class="nav-link"   routerLink="/menu" routerLinkActive="active">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/about">About</a>
+              <a class="nav-link"  routerLink="/about" routerLinkActive="active">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/feedback">FeedBack</a>
+              <a class="nav-link"  routerLink="/feedback" routerLinkActive="active">FeedBack</a>
             </li>
           </ul>
           <div class="user_option">
