--- a/Angular_cafe_Mgm/Cafe-app/src/app/admin/dashboard/dashboard.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/admin/dashboard/dashboard.component.html
@@ -59,7 +59,7 @@
                         <div class="card text-center mb-4">
                           <div class="card-body">
                             <h5 class="card-title">Categories</h5>
-                            <p class="card-text">8</p>
+                            <p class="card-text">{{cl}}</p>
                             <a href="#" class="btn btn-primary">View Details</a>
                           </div>
                         </div>
@@ -68,7 +68,7 @@
                         <div class="card text-center mb-4">
                           <div class="card-body">
                             <h5 class="card-title">Products</h5>
-                            <p class="card-text">14</p>
+                            <p class="card-text">{{pl}}</p>
                             <a href="#" class="btn btn-primary">View Details</a>
                           </div>
                         </div>
@@ -77,7 +77,7 @@
                         <div class="card text-center mb-4">
                           <div class="card-body">
                             <h5 class="card-title">Total Orders</h5>
-                            <p class="card-text">31</p>
+                            <p class="card-text">{{ol}}</p>
                             <a href="#" class="btn btn-primary">View Details</a>
                           </div>
                         </div>
